configure.ac: PACKAGE_VERSION sets Tkabber-pack version in all files. Fixes #2

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@
 **/src/build_c
 **/tkabber
 **/tkabber-plugins
+/autom4te.cache
+/aclocal.m4
+/compile
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+/config.log
+/config.status
