--- a/Makefile.in
+++ b/Makefile.in
@@ -18,7 +18,7 @@ MAKE_ENV=	PREFIX="${PREFIX}" BUILDDIR="${BUILDDIR}" ROOTDIR="${ROOTDIR}" W64="${
 all: extract-tkabber install release
 
 release:
-	@ISCC -dTKABBER_VERSION=${TKABBER_VERSION} tkabber-pack.iss
+	@ISCC -dTKABBER_VERSION=@PACKAGE_VERSION@ tkabber-pack.iss
 build:
 	@cd src && make build ${MAKE_ENV}
 install:
