--- a/configure.ac
+++ b/configure.ac
@@ -9,4 +9,4 @@ AC_INIT([Tkabber-pack], 1.1, [], [])
 AC_PROG_CC_C_O
 AC_PROG_MAKE_SET
 
-AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile])
+AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile src/defs/defs.mak])
