--- a/src/defs/defs.mak.in
+++ b/src/defs/defs.mak.in
@@ -3,6 +3,7 @@
 # Copyright (c) 2006-2008 Martin Matuska
 # Copyright (c) 2014 Vitaly Takmazov
 #
+TKABBER_VERSION=	@PACKAGE_VERSION@
 TCLTK_VERSION=		8.6.3
 TCLLIB_VERSION=		1.16
 BWIDGET_VERSION=	1.9.7
@@ -21,7 +22,7 @@ SNACK_VERSION=		2.2.10
 TDOM_LIBVER=		$(subst .,,$(TDOM_VERSION))
 TCLVFS_LIBVER=		$(subst .,,$(TCLVFS_VERSION))
 TKCON_SOURCE=		20070414
-TCLLIB_SHORT=		1.15
+TCLLIB_SHORT=		$(TCLLIB_VERSION)
 SNACK_SHORT=		2.2
 TLS_LIBVER=		$(subst .,,$(TLS_VERSION))
 TKIMG_LIBVER=		$(subst .,,$(TKIMG_VERSION))
