--- a/src/defs/defs.mak.in
+++ b/src/defs/defs.mak.in
@@ -31,7 +31,7 @@ TCLUDP_LIBVER=		$(subst .,,$(TCLUDP_VERSION))
 TRF_LIBVER=		213
 MEMCHAN_LIBVER=		23
 
-OPENSSL_VERSION=	1.0.1j
+OPENSSL_VERSION=	1.0.1m
 OPENSSL_LIBVER=		1.0.1
 ZLIB_VERSION=		1.2.8
 
