--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ include $(SRCDIR)/defs/common.mak
 ROOTDIR?= 	"${CURDIR}"
 BUILDDIR?=	"${CURDIR}/tmp/build"
 PREFIX?=	"${CURDIR}/tcl"
-MAKE_ENV=	PREFIX="${PREFIX}" BUILDDIR="${BUILDDIR}" ROOTDIR="${ROOTDIR}" W64="${W64}"
+MAKE_ENV=	PREFIX="${PREFIX}" BUILDDIR="${BUILDDIR}" ROOTDIR="${ROOTDIR}" W64="${W64}" OSX="${OSX}"
 
 all: install release
 
