--- a/src/defs/defs.mak.in
+++ b/src/defs/defs.mak.in
@@ -3,52 +3,60 @@
 # Copyright (c) 2006-2008 Martin Matuska
 # Copyright (c) 2014 Vitaly Takmazov
 #
-TKABBER_VERSION=	@PACKAGE_VERSION@
-TCLTK_VERSION=		8.6.10
-TCLLIB_VERSION=		1.20
-BWIDGET_VERSION=	1.9.14
-TWAPI_VERSION=		2.0.12
-TLS_VERSION=		1.7.20
-TKIMG_VERSION=		1.4.2
-MEMCHAN_VERSION=	2.3
-TCLUDP_VERSION=		1.0.11
-TCLVFS_VERSION=		1.4.2
-TKCON_VERSION=		2.5
-WINICO_VERSION=		0.6
-SNACK_VERSION=		2.2.10
+TKABBER_VERSION=	    @PACKAGE_VERSION@
+TCLTK_VERSION=		    8.6.10
+TCLLIB_VERSION=		    1.20
+BWIDGET_VERSION=	    1.9.14
+TWAPI_VERSION=		    2.0.12
+TLS_VERSION=          1.7.20
+TKIMG_VERSION=		    1.4.2
+MEMCHAN_VERSION=	    2.3
+TCLUDP_VERSION=		    1.0.11
+TCLVFS_VERSION=		    1.4.2
+TKCON_VERSION=		    2.5
+WINICO_VERSION=		    0.6
+SNACK_VERSION=		    2.2.10
 
-TCLVFS_LIBVER=		$(subst .,,$(TCLVFS_VERSION))
-TKCON_SOURCE=		20070414
-TCLLIB_SHORT=		$(TCLLIB_VERSION)
-SNACK_SHORT=		2.2
-TLS_LIBVER=		$(subst .,,$(TLS_VERSION))
-TKIMG_LIBVER=		$(subst .,,$(TKIMG_VERSION))
-TKIMG_SHORT=		1.4
-TCLUDP_LIBVER=		$(subst .,,$(TCLUDP_VERSION))
-MEMCHAN_LIBVER=		23
+TCLVFS_LIBVER=		    $(subst .,,$(TCLVFS_VERSION))
+TKCON_SOURCE=         20070414
+TCLLIB_SHORT=         $(TCLLIB_VERSION)
+SNACK_SHORT=		      2.2
+TLS_LIBVER=		        $(subst .,,$(TLS_VERSION))
+TKIMG_LIBVER=         $(subst .,,$(TKIMG_VERSION))
+TKIMG_SHORT=          1.4
+TCLUDP_LIBVER=		    $(subst .,,$(TCLUDP_VERSION))
+MEMCHAN_LIBVER=		    23
 
-LIBRESSL_VERSION=	3.0.2
-LIBRESSL_LIBVER=	3.0.2
+LIBRESSL_VERSION=	    3.0.2
+LIBRESSL_LIBVER=	    3.0.2
 
-BZIP2_VERSION=		1.0.4
-WINDNS_VERSION=		0.1.2
-WINDNS_LIBVER=		012
-SOURCEFORGE_MIRROR?=	vorboss
-GNU_MIRROR?=		ftp.gnu.org/pub/gnu
-POSTGRESQL_MIRROR?=	ftp://ftp.postgresql.org/pub/source/v${POSTGRESQL_VERSION}
+BZIP2_VERSION=		    1.0.4
+WINDNS_VERSION=		    0.1.2
+WINDNS_LIBVER=		    012
+SOURCEFORGE_MIRROR?=  vorboss
 
-TOOLSDIR=	$(SRCDIR)/tools
+TOOLSDIR=	            $(SRCDIR)/tools
 
-CURL?=		@CURL@
-CURL_FLAGS=	-L -s
-UPX?=		$(shell which upx)
+CURL?=                @CURL@
+CURL_FLAGS=           -L -s
+UPX?=                 $(shell which upx)
 ifdef W64
 	WIN64_CFLAGS=--enable-64bit
 	TCLVFS_CFLAGS=-DSTDC_HEADERS=1
+	TCL_MAKE_DIR=win
+	TLS_WIN32_LIBS=-lws2_32 -lgdi32 -lcrypt32
+	INSTALL_WIN32_DEPS=install-winico install-windns
+else
+ifdef OSX
+	TCL_MAKE_DIR=unix
+	OSX_CFLAGS=--enable-aqua
 else
 	TCLVFS_CFLAGS=-D_USE_32BIT_TIME_T=1
+	TCL_MAKE_DIR=win
+	TLS_WIN32_LIBS=-lws2_32 -lgdi32 -lcrypt32
+endif
 endif
 
-DISTFILES?=	$(SRCDIR)/distfiles
-MD5SUMS=	$(SRCDIR)/md5sums
-PATCHDIR=	$(SRCDIR)/patches
+DISTFILES?=           $(SRCDIR)/distfiles
+MD5SUMS=	            $(SRCDIR)/md5sums
+PATCHDIR=	            $(SRCDIR)/patches
