Massive environment update
* [llvm-mingw](https://github.com/mstorsjo/llvm-mingw) used to build all packages.
   Patches are updated to fix issues with llvm-mingw 20191230
* Tcl/Tk 8.6.10
* tcllib 1.7.20, BWidget 1.9.14, tcludp 1.0.11, tcltls 1.7.20, windns 0.1.2
* Trf and tDOM are dropped because of build/run errors
* tcltls built with libressl (perl is not required anymore)
* zip/unzip are dropped, we are not using zips anymore
* changed dead SourceForge mirror

--- a/src/defs/defs.mak.in
+++ b/src/defs/defs.mak.in
@@ -4,22 +4,19 @@
 # Copyright (c) 2014 Vitaly Takmazov
 #
 TKABBER_VERSION=	@PACKAGE_VERSION@
-TCLTK_VERSION=		8.6.4
-TCLLIB_VERSION=		1.16
-BWIDGET_VERSION=	1.9.7
+TCLTK_VERSION=		8.6.10
+TCLLIB_VERSION=		1.20
+BWIDGET_VERSION=	1.9.14
 TWAPI_VERSION=		2.0.12
-TLS_VERSION=		1.6.4
+TLS_VERSION=		1.7.20
 TKIMG_VERSION=		1.4.2
-TDOM_VERSION=		0.8.3
 MEMCHAN_VERSION=	2.3
-TRF_VERSION=		2.1.3
-TCLUDP_VERSION=		1.0.8
+TCLUDP_VERSION=		1.0.11
 TCLVFS_VERSION=		1.4.2
 TKCON_VERSION=		2.5
 WINICO_VERSION=		0.6
 SNACK_VERSION=		2.2.10
 
-TDOM_LIBVER=		$(subst .,,$(TDOM_VERSION))
 TCLVFS_LIBVER=		$(subst .,,$(TCLVFS_VERSION))
 TKCON_SOURCE=		20070414
 TCLLIB_SHORT=		$(TCLLIB_VERSION)
@@ -28,21 +25,15 @@ TLS_LIBVER=		$(subst .,,$(TLS_VERSION))
 TKIMG_LIBVER=		$(subst .,,$(TKIMG_VERSION))
 TKIMG_SHORT=		1.4
 TCLUDP_LIBVER=		$(subst .,,$(TCLUDP_VERSION))
-TRF_LIBVER=		213
 MEMCHAN_LIBVER=		23
 
-OPENSSL_VERSION=	1.0.1m
-OPENSSL_LIBVER=		1.0.1
-ZLIB_VERSION=		1.2.8
+LIBRESSL_VERSION=	3.0.2
+LIBRESSL_LIBVER=	3.0.2
 
-ZIP_VERSION=		2.32
-ZIP_SHORT=		$(subst .,,$(ZIP_VERSION))
-UNZIP_VERSION=		6.0
-UNZIP_SHORT=		$(subst .,,$(UNZIP_VERSION))
 BZIP2_VERSION=		1.0.4
-WINDNS_VERSION=		0.1.1
-WINDNS_LIBVER=		01
-SOURCEFORGE_MIRROR?=	dfn
+WINDNS_VERSION=		0.1.2
+WINDNS_LIBVER=		012
+SOURCEFORGE_MIRROR?=	vorboss
 GNU_MIRROR?=		ftp.gnu.org/pub/gnu
 POSTGRESQL_MIRROR?=	ftp://ftp.postgresql.org/pub/source/v${POSTGRESQL_VERSION}
 
@@ -50,9 +41,6 @@ TOOLSDIR=	$(SRCDIR)/tools
 
 WGET?=		$(shell which wget)
 WGET_FLAGS=	--passive-ftp --no-check-certificate
-UNZIP=		$(TOOLSDIR)/unzip.exe
-ZIP=		$(TOOLSDIR)/zip.exe
-PERL?=		$(shell which perl)
 UPX?=		$(shell which upx)
 ifdef W64
 	WIN64_CFLAGS=--enable-64bit
@@ -66,6 +54,4 @@ endif
 DISTFILES?=	$(SRCDIR)/distfiles
 MD5SUMS=	$(SRCDIR)/md5sums
 PATCHDIR=	$(SRCDIR)/patches
-
 MESSAGE_WGET=		"You require wget to auto-download the sources. See SOURCES.txt for more information."
-MESSAGE_OPENSSL_PERL=	"You require perl to configure OpenSSL. See BUILD-MinGW.txt for more information."
