switch to curl from wget
* curl is bundled with Windows 10/macOS

--- a/configure.ac
+++ b/configure.ac
@@ -8,4 +8,6 @@ AC_INIT([Tkabber-pack], 1.1.2, [], [])
 # Checks for programs.
 AC_PROG_MAKE_SET
 
+AC_CHECK_PROG([CURL], [curl], [curl])
+
 AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile src/defs/defs.mak])
