--- a/configure.ac
+++ b/configure.ac
@@ -11,8 +11,47 @@ AC_EXEEXT
 AC_PROG_MAKE_SET
 AC_CHECK_PROG([CURL], [curl], [curl])
 
-TEA_INIT()
+AC_CANONICAL_HOST
 
-AS_IF([[test "x$build" != "x$host"]], [AC_PATH_PROG(TCLSH_PROG, tclsh)], [TEA_PROG_TCLSH])
+AS_IF([[test "x$build_os" != "x$host_os"]], [AC_PATH_PROG(TCLSH_PROG, tclsh)])
 
-AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile src/defs/defs.mak src/defs/shared.mak])
+case $host_os in
+    *darwin*)
+	HOST_IS=darwin
+	DARWIN=1
+	TCL_MAKE_DIR=unix
+  CMAKE_SYSTEM_NAME=Darwin
+  CMAKE_GENERATOR="Unix Makefiles"
+	;;
+    *linux*)
+	HOST_IS=linux
+	LINUX=1
+	;;
+    *mingw*)
+	HOST_IS=windows
+	WINDOWS=1
+	TCL_MAKE_DIR=win
+	if test x$build != x$host; then
+	   CROSSBUILD=1
+	   CMAKE_SYSTEM_NAME=Windows
+	   CMAKE_GENERATOR="Unix Makefiles"
+	else
+	   CMAKE_GENERATOR="MSYS Makefiles"
+	fi
+	if test x$host_cpu = xx86_64; then
+	   W64=1
+	fi
+	;;
+    *) ;;
+esac
+
+AC_SUBST(WINDOWS)
+AC_SUBST(LINUX)
+AC_SUBST(DARWIN)
+AC_SUBST(CMAKE_SYSTEM_NAME)
+AC_SUBST(CROSSBUILD)
+AC_SUBST(CMAKE_GENERATOR)
+AC_SUBST(TCL_MAKE_DIR)
+AC_SUBST(W64)
+
+AC_OUTPUT([info-after-ru.txt info-after-en.txt Makefile src/defs/defs.mak src/defs/shared.mak src/defs/common.mak])
