Initial CMake support

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,6 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        ./configure
-        make install
+        mkdir build && cd build
+        cmake .. -DCMAKE_INSTALL_PREFIX=dist
+        make
